getLyrics implemented :o